--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
